# mop-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
bench/: Snakefile
bench/bamsim/: Cargo.toml
bench/bamsim/src/: main.rs
bench/envs/: r.yaml
bench/scripts/: generate_bam.py  plot.R  plot.py
data/: all-20.d4  bam_fixed_depth_10-50.d4  test.per-base.d4
scripts/: generate_bam.py  test.bam  test.txt
src/: d4_utils.rs  main.rs
tests/: integration_test.rs
tests/data/: truth.bed
