[package]
name = "moprs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = {version = "4.5.16", features = ["derive"]}
d4 = {git = "https://github.com/38/d4-format.git"}
env_logger = "0.11.5"
log = "0.4.22"
rayon = "1.10.0"


[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
